# speedometer_qml

./: .gitignore  CMakeLists.txt  subproject_map.cmake
_build_dir_arm/: raspberry-toolchain.cmake
_build_dir_arm_cross/: clean_all  make_distrib  raspberry-toolchain.cmake
_build_dir_arm_host/: linux-toolchain.cmake  make_cb_project  make_distrib  raspberry-toolchain.cmake  run_debug.sh
_build_dir_linux/: codeblocks_processor.py  qt_autowash.layout
_build_dir_windows/: clean_all  clean_all.cmd  make_makefile_work.cmd
autowash/: CMakeLists.txt  autowashapp.cpp  autowashapp.h  localconfig.h  localconfig.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.cpp  popup.h  popup.ui
autowash_qml/: CMakeLists.txt  autowashqmlapp.cpp  autowashqmlapp.h  config.h  localconfig.h  localconfig.h.in  main.cpp
autowash_qml/gvl/: NVL2UI.gvl
autowash_qml/qml/: FontsCollections.qml  FontsCollections.qmlc  VisAdvert.qml  VisAdvert.qmlc  VisCashCollect.qml  VisCashCollect.qmlc  VisCashCollectFin.qml  VisCashCollectFin.qmlc  VisCleanup.qml  VisCleanup.qmlc  VisFin.qml  VisFin.qmlc  VisFreeMoney.qml  VisFreeMoney.qmlc  VisFunc.qml  VisFunc.qmlc  VisIdle.qml  VisIdle.qmlc  VisQRCode.qml  VisStop.qml  VisStop.qmlc  VisTest.qml  VisVideo.qml  main.qml  main.qmlc  test.qml
autowash_qml/qml/qmlelements/: Button.qml  Log.qml  MoneyTextBox.qml  MoneyTextBox.qmlc  NetVariables.qml  NetVariables.qmlc  SwipeView.qml  TextBox.qml  VideoFiles.qml  qmldir
autowash_qml/run_scripts/: autowash_run.in
autowash_qml/settings/: settings.cpp  settings.h
codesys_test_project/: test.project
helloworld/: CMakeLists.txt  main.cpp
libargtable/: CMakeLists.txt
libbuildinfo/: BuildTimeConfigModule.cmake  CMakeLists.txt  buildinfo.cpp  buildinfo.h  config.h  config.h.in  info.h  info.h.in
libcodesysnv/: CMakeLists.txt  codesysnvlistparser.cpp  codesysnvlistparser.h  qcodesysnv.cpp  qcodesysnv.h
libeom/: CMakeLists.txt
libeom/exceptions/: ebaseexception.cpp  ebaseexception.h
libeom/fstools/: fstools.cpp  fstools.h
libeom/iterators/: javastyleiterator.h
libeom/logger/: logger.h  logger_qt4.cpp
libeom/stringutils/: stringutils.cpp  stringutils.h
libiec61131parser/: CMakeLists.txt  IEC61131.g4  IEC61131BaseListener.cpp  IEC61131BaseListener.h  IEC61131BaseVisitor.cpp  IEC61131BaseVisitor.h  IEC61131Lexer.cpp  IEC61131Lexer.h  IEC61131Listener.cpp  IEC61131Listener.h  IEC61131Parser.cpp  IEC61131Parser.h  IEC61131Visitor.cpp  IEC61131Visitor.h  README
libiec61131parser/runtime/: Lexer.h  Vocabulary.cpp  antlr4-common.h
libiec61131parser/runtime/support/: StringUtils.cpp  StringUtils.h  StringUtils.h.orig
libiec61131parser/runtime/tree/pattern/: ParseTreePatternMatcher.cpp
libqrencode/: CMakeLists.txt
libqtquickauxitems/: CMakeLists.txt  qtquickqrcode.cpp  qtquickqrcode.h
python_variable_sender/: qml_program.py  qml_program_postcounterfund.py
python_variable_sender/iec61131parser/: IEC61131.g4  IEC61131.interp  IEC61131Lexer.interp  IEC61131Lexer.py  IEC61131Lexer.tokens  IEC61131Listener.py  IEC61131Parser.py  LoadGVLFile.py
python_variable_sender/netvars/: NetVarsSender.py  VariableList.py
python_variable_sender/test_data/: NVL2UI.gvl
qr_code_test/: CMakeLists.txt  config.h  localconfig.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrcodetestapp.cpp  qrcodetestapp.h
qr_code_test/qml/: main.qml
qr_code_test/settings/: settings.cpp  settings.h
