SET (SUBPROJECT helloworld)
PROJECT (${SUBPROJECT})

IF (NOT PROJECT_WORKING_CHARSET)
 SET (PROJECT_WORKING_CHARSET "UTF8")
ENDIF(NOT PROJECT_WORKING_CHARSET)



SET (SOURCES
   main.cpp
 
)



ADD_EXECUTABLE(${SUBPROJECT}  ${SOURCES}  )
TARGET_LINK_LIBRARIES (${SUBPROJECT}  pthread argtable eom)
#TARGET_LINK_LIBRARIES (${SUBPROJECT}  eom codesysnv )




