# -*- coding:utf-8 -*-
# -*- кодировка:utf-8 -*-

SET (SUBPROJECT qrencode)


PROJECT (${SUBPROJECT}  LANGUAGES C)

SET(${SUBPROJECT}_VERSION_MAJOR 4)
SET(${SUBPROJECT}_VERSION_MINOR 1)
SET(${SUBPROJECT}_VERSION_PATCH 1)

SET(${SUBPROJECT}_VERSION "${${SUBPROJECT}_VERSION_MAJOR}.${${SUBPROJECT}_VERSION_MINOR}.${${SUBPROJECT}_VERSION_PATCH}" )


SET (HEADERS
  qrencode_inner.h
  qrinput.h
  bitstream.h
  qrspec.h
  rsecc.h
  split.h
  mask.h
  mqrspec.h
  mmask.h
)

SET (SOURCES
 qrencode.c
 qrinput.c
 bitstream.c
 qrspec.c
 rsecc.c
 split.c
 mask.c
 mqrspec.c
 mmask.c
)





SOURCE_GROUP ("Header Files" FILES ${HEADERS})
SOURCE_GROUP ("Source Files" FILES ${SOURCES})


ADD_LIBRARY(${SUBPROJECT}  ${HEADERS} ${SOURCES}   )

TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PRIVATE MAJOR_VERSION=${${SUBPROJECT}_VERSION_MAJOR})
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PRIVATE MINOR_VERSION=${${SUBPROJECT}_VERSION_MINOR} )
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PRIVATE MICRO_VERSION=${${SUBPROJECT}_VERSION_PATCH} )
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PRIVATE VERSION="${${SUBPROJECT}_VERSION}")
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PRIVATE HAVE_SDL=0)
TARGET_COMPILE_DEFINITIONS(${SUBPROJECT} PRIVATE STATIC_IN_RELEASE=static)
  


IF (WIN32)
	#INCLUDE(GenerateExportHeader) 
	#GENERATE_EXPORT_HEADER(${SUBPROJECT})

ENDIF(WIN32)






